--- a/Design/Shop/LDShop.GG.plist
+++ b/Design/Shop/LDShop.GG.plist
@@ -9,7 +9,7 @@
      <key>kind</key>
      <string>software-package</string>
      <key>url</key>
-     <string>https://ld-space.oss-ap-southeast-1.aliyuncs.com/app/ios/LDShop.GG.ipa</string>
+     <string>https://github.com/WillChuen/Design/blob/main/Design/Shop/LDShop.GG.ipa</string>
     </dict>
     <dict>
      <key>kind</key>
