--- a/Design/Shop/LDShop.GG.plist
+++ b/Design/Shop/LDShop.GG.plist
@@ -17,7 +17,7 @@
      <key>need-shine</key>
      <integer>0</integer>
      <key>url</key>
-     <string>https://ld-space.oss-ap-southeast-1.aliyuncs.com/app/ios/logo.jpg</string>
+     <string>https://github.com/WillChuen/Design/blob/main/Design/Shop/WechatIMG123.jpg</string>
     </dict>
    </array>
    <key>metadata</key>
