--- a/Design/Shop/LDShop.plist
+++ b/Design/Shop/LDShop.plist
@@ -9,7 +9,7 @@
      <key>kind</key>
      <string>software-package</string>
      <key>url</key>
-     <string>https://github.com/WillChuen/Design/blob/main/Design/Shop/LDShop.GG.ipa</string>
+     <string>https://github.com/WillChuen/Design/blob/main/Design/Shop/LDShop.ipa</string>
     </dict>
     <dict>
      <key>kind</key>
