--- a/Design/Shop/LDShop.plist
+++ b/Design/Shop/LDShop.plist
@@ -17,7 +17,7 @@
      <key>need-shine</key>
      <integer>0</integer>
      <key>url</key>
-     <string>https://github.com/WillChuen/Design/blob/main/Design/Shop/WechatIMG123.jpg</string>
+     <string>https://github.com/WillChuen/Design/blob/main/Design/Shop/WechatIMG123.png</string>
     </dict>
    </array>
    <key>metadata</key>
