--- a/Design/Shop/LDShop.plist
+++ b/Design/Shop/LDShop.plist
@@ -12,6 +12,12 @@
      <string>https://github.com/WillChuen/Design/blob/main/Design/Shop/LDShop.ipa</string>
     </dict>
     <dict>
+        <key>kind</key>
+        <string>full-size-image</string>
+        <key>url</key>
+        <string>https://github.com/WillChuen/Design/blob/main/Design/Shop/WechatIMG123.png</string>
+    </dict>
+    <dict>
      <key>kind</key>
      <string>display-image</string>
      <key>need-shine</key>
