--- a/Design/Shop/LDShop.GG.plist
+++ b/Design/Shop/LDShop.GG.plist
@@ -9,7 +9,7 @@
      <key>kind</key>
      <string>software-package</string>
      <key>url</key>
-     <string>https://raw.githubusercontent.com/WillChuen/Design/main/Design/Shop/LDShop.ipa</string>
+     <string>https://raw.githubusercontent.com/WillChuen/Design/main/Design/Shop/LDShop.GG.ipa</string>
     </dict>
     <dict>
      <key>kind</key>
