--- a/Design/Shop/manifest.plist
+++ b/Design/Shop/manifest.plist
@@ -9,7 +9,7 @@
      <key>kind</key>
      <string>software-package</string>
      <key>url</key>
-     <string>https://raw.githubusercontent.com/WillChuen/Design/main/Design/Shop/LDShop.GG.ipa</string>
+     <string>https://ld-space.oss-ap-southeast-1.aliyuncs.com/app/ios/LDShop.GG.ipa</string>
     </dict>
     <dict>
      <key>kind</key>
@@ -17,7 +17,7 @@
      <key>need-shine</key>
      <integer>0</integer>
      <key>url</key>
-     <string>https://raw.githubusercontent.com/WillChuen/Design/main/Design/Shop/WechatIMG123.png</string>
+     <string>https://ld-space.oss-ap-southeast-1.aliyuncs.com/app/ios/logo.jpg</string>
     </dict>
    </array>
    <key>metadata</key>
