--- a/Design/Shop/manifest.plist
+++ b/Design/Shop/manifest.plist
@@ -1,38 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
- <dict>
-  <key>items</key>
-  <dict>
-   <key>assets</key>
-   <array>
-    <dict>
-     <key>kind</key>
-     <string>software-package</string>
-     <key>url</key>
-     <string>https://raw.githubusercontent.com/WillChuen/Design/main/Design/Shop/btcdoApp.ipa</string>
-    </dict>
-    <dict>
-     <key>kind</key>
-     <string>display-image</string>
-     <key>need-shine</key>
-     <integer>0</integer>
-     <key>url</key>
-     <string>https://ld-space.oss-ap-southeast-1.aliyuncs.com/app/ios/logo.jpg</string>
-    </dict>
-   </array>
-   <key>metadata</key>
-   <array>
-    <dict>
-     <key>bundle-identifier</key>
-     <string>com.ldshop.gg</string>
-     <key>bundle-version</key>
-     <string>1.0.0</string>
-     <key>kind</key>
-     <string>software</string>
-     <key>title</key>
-     <string>LDShop.GG</string>
-    </dict>
-   </array>
-  </dict>
- </dict>
+<dict>
+    <key>items</key>
+    <array>
+        <dict>
+            <key>assets</key>
+            <array>
+                <dict>
+                    <key>kind</key>
+                    <string>software-package</string>
+                    <key>url</key>
+                    <string>https://easybtc-bucket.oss-cn-hongkong.aliyuncs.com/20191206easybtc.ipa</string>
+                </dict>
+                <dict>
+                    <key>kind</key>
+                    <string>full-size-image</string>
+                    <key>url</key>
+                    <string>http://q1vnt9feu.bkt.clouddn.com/57.png</string>
+                </dict>
+                <dict>
+                    <key>kind</key>
+                    <string>display-image</string>
+                    <key>url</key>
+                    <string>http://q1vnt9feu.bkt.clouddn.com/512.png</string>
+                </dict>
+            </array>
+            <key>metadata</key>
+            <dict>
+                <key>bundle-identifier</key>
+                <string>qihang.purbull.app</string>
+                <key>bundle-version</key>
+                <string>1.0.0</string>
+                <key>kind</key>
+                <string>software</string>
+                <key>title</key>
+                <string>EasyBtc</string>
+            </dict>
+        </dict>
+    </array>
+</dict>
 </plist>
