--- a/Design/Shop/manifest.plist
+++ b/Design/Shop/manifest.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>https://easybtc-bucket.oss-cn-hongkong.aliyuncs.com/20191206easybtc.ipa</string>
+                    <string>https://ld-space.oss-ap-southeast-1.aliyuncs.com/app/ios/LDShop.GG.ipa</string>
                 </dict>
                 <dict>
                     <key>kind</key>
